# sunshine-input-bridge

./: Dockerfile  pyproject.toml
sunshine_input_bridge/: __main__.py  command_client.py  command_server.py  config.yaml  input_pipe.py  output_devices.py  settings.py  source_devices.py  sunshine_input_bridge.py
sunshine_input_bridge/output/: __init__.py  base.py  gamepad.py  keyboard.py  mouse.py  touchscreen.py
sunshine_input_bridge/requests_unixsocket/: adapters.py
sunshine_input_bridge/utils/: __init__.py  ecodes.py  logging.py
